WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
23713
COMPILE_ASSERTS should be moved out of TypeTraits.h and into .cpp file
https://bugs.webkit.org/show_bug.cgi?id=23713
Summary
COMPILE_ASSERTS should be moved out of TypeTraits.h and into .cpp file
David Levin
Reported
2009-02-03 14:16:13 PST
It isn't necessary to have every file compile them, and they add unnecessary clutter in there.
Attachments
Patch to fix bug (moved COMPILE_ASSERTs out of TypeTraits.h and into TypeTraits.cpp)
(24.74 KB, patch)
2009-02-03 14:50 PST
,
David Levin
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Levin
Comment 1
2009-02-03 14:50:12 PST
Created
attachment 27294
[details]
Patch to fix bug (moved COMPILE_ASSERTs out of TypeTraits.h and into TypeTraits.cpp)
Darin Adler
Comment 2
2009-02-03 14:52:56 PST
Comment on
attachment 27294
[details]
Patch to fix bug (moved COMPILE_ASSERTs out of TypeTraits.h and into TypeTraits.cpp) r=me
Brent Fulgham
Comment 3
2009-02-05 15:44:30 PST
Applied in @
r40678
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug