2009-02-05  David Levin  <levin@chromium.org>

Reviewed by Darin Adler.

        Bug 23713: COMPILE_ASSERTS should be moved out of TypeTraits.h and into .cpp file
        <https://bugs.webkit.org/show_bug.cgi?id=23713>

        * GNUmakefile.am:
        * JavaScriptCore.pri:
        * JavaScriptCore.scons:
        * JavaScriptCore.vcproj/WTF/WTF.vcproj:
        * JavaScriptCore.xcodeproj/project.pbxproj:
        * JavaScriptCoreSources.bkl:

        * wtf/HashTraits.h:
        Remove unnecessary header file that I missed when moving out the type traits form this file.

        * wtf/TypeTraits.cpp: Added.
        (WTF::):
        * wtf/TypeTraits.h:
        Moved the compile asserts into TypeTraits.cpp file.



Canonical link: https://commits.webkit.org/32817@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@40678 268f45cc-cd09-0410-ab3c-d52691b4dbfc